<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format2.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>pcapplusplus_vendor</name>
  <version>21.11.0</version>
  <description>
    Wrapper around PcapPlusPLus.
  </description>
  <maintainer email="russ@rw.id.au">Russ Webber</maintainer>
  <license>Public Domain</license>

  <url type="website">https://pcapplusplus.github.io</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>libpcap</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
